# curupira

./: .gitignore  curupira.opam  dune  dune-project
lib/: dune
lib/syntax/: dune  perm.ml  symbols.ml  terms.ml
lib/utils/: dune  lists.ml  lists.mli
test/: dune  test_curupira.ml
