(lang dune 3.17)

(using menhir 3.0)

(name curupira)

(generate_opam_files true)

(source
 (github deividrvale/curupira))

(authors "Deivid Vale deividrodriguesvale@gmail.com")

(maintainers "Deivid Vale deividrodriguesvale@gmail.com")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name curupira)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
